# nspin.github.io

./: 404.html  404.md  Main.hs  Makefile  NOTES.md  README.md  TODO  TODO.md  about.html  articles.html  articles.md  articles.py  contact.md  cv.html  default.nix  deploy.sh  index.html  interpolate.py  main.py  portfolio.html  projects.html  projects.md  resume.md  robots.txt  shell.nix  sitemap.xml  unikernel-resources.html  update-resume  update-resume.sh  update.sh  view  watch.sh  website.cabal  ws
_build/: 404.html  articles.html  index.html  portfolio.html  projects.html  sitemap.xml
_site/: 404.html  CNAME  about.html  articles.html  contact.html  cv.html  index.html  portfolio.html  projects.html  resume.html  sitemap.xml
articles/: an-elegant-method-for-solving-the-rubiks-cube.html  blindfolded-cubing.html  blindfolded-cubing.md  pure-x11-logic-in-haskell.html  pure-x11-logic-in-haskell.md  solving-the-rubiks-cube-blindfolded.html  solving-the-rubiks-cube-blindfolded.md  unikernel-resources.html  using-hakyll.md  xhb-monad.md
css/: all.less  article.css  articles.css  base.css  content.css  content.less  index.css  index.less  layout.css  layout.less  misc.less  projects.css  text.css
dynamic/: 404.html  index.html  portfolio.html  projects.html
js/: navigation-scroll.js
keep/: scroll.js
md/: unikernel-resources.md
misc/: unikernel-resources.html
pages/: 404.html  index.html  projects.html
papers/: newly-reducible-polynomial-iterates.html  seed2021.html
resume/: resume.cls
robots/: exclude.yaml  include.yaml  robots.txt.in
src/: Main.hs  (+1 more)
(+119 files in other folders)
