name:                website
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable site
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010

  build-depends:       base
                     , pandoc
                     , hakyll
